--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "browserify": "9.0.8",
     "classnames": "1.2.1",
     "mocha": "2.2.4",
-    "node-sass": "2.1.1",
+    "node-sass": "3.0.0-beta.7",
     "react": "0.13.2",
     "reactify": "1.1.0"
   },
