--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "dependencies": {
-    "browserify-transform-tools": "1.3.3"
+    "browserify-transform-tools": "1.3.3",
+    "postcss": "4.1.8"
   },
   "devDependencies": {
     "browserify": "9.0.8",
