--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "browserify-transform-tools": "1.3.3",
+    "falafel": "1.0.1",
     "postcss": "4.1.8"
   },
   "devDependencies": {
