--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "component-css-ns",
+  "name": "css-ns",
   "version": "0.0.1",
   "description": "",
   "dependencies": {
-    "browserify-transform-tools": "1.3.3",
-    "falafel": "1.0.1",
-    "postcss": "4.1.8"
   },
   "devDependencies": {
-    "browserify": "9.0.8",
-    "classnames": "1.2.1",
-    "mocha": "2.2.4",
-    "node-sass": "3.0.0-beta.7",
-    "react": "0.13.2",
-    "reactify": "1.1.0"
+    "react": "0.13.2"
   },
   "scripts": {
-    "test": "mocha test/suite.js"
+    "test": "mocha test"
   },
   "author": "Jarno Rantanen <jarno@jrw.fi>",
   "license": "MIT"
