--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "css-ns",
   "version": "0.0.1",
   "description": "",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "chai": "3.2.0",
+    "mocha": "2.2.5",
     "react": "0.13.2"
   },
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha *.spec.js"
   },
   "author": "Jarno Rantanen <jarno@jrw.fi>",
   "license": "MIT"
