--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "dependencies": {},
   "devDependencies": {
-    "chai": "3.2.0",
-    "mocha": "2.2.5",
-    "react": "0.13.2"
+    "chai": "3.3.0",
+    "mocha": "2.3.3",
+    "react": "0.14.0",
+    "react-dom": "0.14.0"
   },
   "scripts": {
     "test": "mocha *.spec.js"
