Add first version of the ReactDemoApp component.

--- a/demo/react/package.json
+++ b/demo/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "css-ns_react-demo",
   "scripts": {
-    "start": "cp app/index.html dist && watchify -t babelify app/index.js --debug -v -o dist/index.js"
+    "start": "cp app/index.{html,css} dist && watchify -t babelify app/index.js --debug -v -o dist/index.js"
   },
   "dependencies": {
     "babelify": "^6.3.0",
