Add "build" command to the React demo as well.

--- a/demo/react/package.json
+++ b/demo/react/package.json
@@ -1,7 +1,8 @@
 {
   "name": "css-ns_react-demo",
   "scripts": {
-    "start": "cp app/index.html dist && node-sass app/index.scss --watch --output dist & watchify -t babelify app/index.js --debug -v -o dist/index.js"
+    "start": "cp app/index.html dist && node-sass app/index.scss --watch --output dist &                      watchify   -t babelify app/index.js --debug -v -o                    dist/index.js",
+    "build": "cp app/index.html dist && node-sass app/index.scss         --output dist && NODE_ENV=production browserify -t babelify app/index.js | uglifyjs --compress --mangle > dist/index.js 2> /dev/null"
   },
   "dependencies": {
     "babelify": "^6.3.0",
@@ -11,6 +12,7 @@
     "react-addons-perf": "^0.14.0",
     "react-bootstrap": "^0.27.1",
     "react-dom": "^0.14.0",
+    "uglify-js": "^2.5.0",
     "watchify": "^3.4.0"
   }
 }
