Add selenium/SauceLabs support.

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "chai": "3.3.0",
     "mocha": "2.3.3",
     "react": "0.14.0",
-    "react-dom": "0.14.0"
+    "react-dom": "0.14.0",
+    "webdriverio": "3.2.6"
   },
   "scripts": {
     "test": "mocha *.spec.js",
     "test-build": "browserify *.spec.js -v -o test/suite.js",
+    "test-selenium": "mocha selenium",
     "deploy-gh-pages": "git stash && npm run test-build && cp -r test temp && git checkout gh-pages && mv temp/* . && rm -rf temp && git commit -am 'Automatic gh-pages deploy' && git push origin gh-pages && git checkout -"
   },
   "author": "Jarno Rantanen <jarno@jrw.fi>",
