--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "css-ns",
-  "version": "0.0.1",
-  "description": "",
+  "version": "1.0.0",
+  "description": "Dead-simple CSS namespaces",
   "main": "css-ns.js",
   "dependencies": {},
   "devDependencies": {
