--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.1.4",
   "description": "Dead-simple CSS namespaces",
   "main": "css-ns.js",
+  "engines": {
+    "node": ">=9.3.0 <10",
+    "npm": ">=5.5.1 <6"
+  },
   "dependencies": {},
   "devDependencies": {
     "browserify": "12.0.1",
