Revert "Ensure the package scripts complain when running on a wrong node version."
This reverts commit 6dbe959244a22fb562dd055a99f7e8695f2cf8f6.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "devDependencies": {
     "browserify": "12.0.1",
     "chai": "3.3.0",
-    "check-node-version": "^3.2.0",
     "mocha": "2.3.3",
     "react": "0.14.0",
     "react-dom": "0.14.0",
@@ -22,10 +21,10 @@
     "url": "https://github.com/jareware/css-ns.git"
   },
   "scripts": {
-    "test": "check-node-version --package && mocha *.spec.js",
-    "test-build": "check-node-version --package && browserify *.spec.js -v -o test/suite.js",
-    "test-selenium": "check-node-version --package && mocha selenium",
-    "deploy-gh-pages": "check-node-version --package && git stash && npm run test-build && cp -r test temp && git checkout gh-pages && mv temp/* . && rm -rf temp && git commit -am 'Automatic gh-pages deploy' && git push origin gh-pages && git checkout -"
+    "test": "mocha *.spec.js",
+    "test-build": "browserify *.spec.js -v -o test/suite.js",
+    "test-selenium": "mocha selenium",
+    "deploy-gh-pages": "git stash && npm run test-build && cp -r test temp && git checkout gh-pages && mv temp/* . && rm -rf temp && git commit -am 'Automatic gh-pages deploy' && git push origin gh-pages && git checkout -"
   },
   "author": "Jarno Rantanen <jarno@jrw.fi>",
   "license": "MIT",
