--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Dead-simple CSS namespaces",
   "main": "css-ns.js",
   "engines": {
-    "node": ">=9.3.0 <10",
-    "npm": ">=5.5.1 <6"
+    "node": ">=7.0.0",
+    "npm": ">=3.10.8"
   },
   "dependencies": {},
   "devDependencies": {
